finalized results page`

--- a/capture/Base.lproj/Main.storyboard
+++ b/capture/Base.lproj/Main.storyboard
@@ -655,13 +655,13 @@
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label 6" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hOo-KM-AqB">
-                                        <rect key="frame" x="8" y="193" width="60" height="17"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label 6" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hOo-KM-AqB">
+                                        <rect key="frame" x="8" y="194" width="60" height="17"/>
                                         <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="14"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label 6" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PtQ-kq-elI">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label 6" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PtQ-kq-elI">
                                         <rect key="frame" x="8" y="211" width="60" height="17"/>
                                         <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="14"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -676,6 +676,13 @@
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label 6" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hz5-V8-6n0">
                                         <rect key="frame" x="8" y="247" width="60" height="17"/>
                                         <color key="tintColor" red="0.98431372549019602" green="0.0" blue="0.023529411764705882" alpha="1" colorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="14"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label 6" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0gT-bd-AAH">
+                                        <rect key="frame" x="8" y="263" width="60" height="17"/>
+                                        <color key="tintColor" red="0.98431372549999996" green="0.0" blue="0.023529411760000001" alpha="1" colorSpace="calibratedRGB"/>
                                         <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="14"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
@@ -747,35 +754,52 @@
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <textView hidden="YES" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vnh-MQ-Tt6">
+                                        <rect key="frame" x="8" y="78" width="342" height="204"/>
+                                        <color key="backgroundColor" red="0.14509803921568629" green="0.40784313725490196" blue="0.10980392156862745" alpha="0.0" colorSpace="calibratedRGB"/>
+                                        <mutableString key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</mutableString>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
                                 </subviews>
                                 <color key="backgroundColor" red="0.16078431372549021" green="0.58431372549019611" blue="0.090196078431372548" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="Vnh-MQ-Tt6" secondAttribute="trailing" id="1zo-HA-ZhQ"/>
                                     <constraint firstAttribute="trailing" secondItem="5rk-cm-ID2" secondAttribute="trailing" constant="8" id="2PF-6Y-F0a"/>
                                     <constraint firstAttribute="trailing" secondItem="fti-fd-5Xa" secondAttribute="trailing" constant="8" id="4hO-bG-lbV"/>
                                     <constraint firstItem="xRr-FU-RVm" firstAttribute="top" secondItem="F2J-bV-Zgy" secondAttribute="top" constant="122" id="6jI-Sa-JfO"/>
+                                    <constraint firstItem="Vnh-MQ-Tt6" firstAttribute="leading" secondItem="F2J-bV-Zgy" secondAttribute="leading" constant="8" id="6ss-CH-dou"/>
                                     <constraint firstAttribute="trailing" secondItem="Wfk-25-ESW" secondAttribute="trailing" constant="8" id="7RL-4L-bWt"/>
                                     <constraint firstAttribute="trailing" secondItem="768-91-WwE" secondAttribute="trailing" constant="8" id="84M-sw-Qwe"/>
                                     <constraint firstItem="qrb-2A-xci" firstAttribute="top" secondItem="F2J-bV-Zgy" secondAttribute="top" constant="175" id="9fm-IJ-btU"/>
                                     <constraint firstAttribute="trailing" secondItem="CVQ-0Q-eMc" secondAttribute="trailing" constant="282" id="A4n-aM-Djz"/>
                                     <constraint firstItem="sIf-Rr-NqT" firstAttribute="top" secondItem="F2J-bV-Zgy" secondAttribute="top" constant="229" id="BLa-V6-9xa"/>
+                                    <constraint firstItem="hOo-KM-AqB" firstAttribute="leading" secondItem="F2J-bV-Zgy" secondAttribute="leading" constant="8" id="Ba9-iE-nDX"/>
                                     <constraint firstAttribute="width" constant="350" id="ChC-hq-l7Z"/>
                                     <constraint firstItem="tEw-Sa-mL4" firstAttribute="top" secondItem="F2J-bV-Zgy" secondAttribute="top" constant="156" id="FrB-AF-Uw0"/>
                                     <constraint firstItem="hz5-V8-6n0" firstAttribute="leading" secondItem="F2J-bV-Zgy" secondAttribute="leading" constant="8" id="G5Y-oH-8gh"/>
                                     <constraint firstAttribute="trailing" secondItem="3ox-Pu-eIx" secondAttribute="trailing" constant="8" id="G5d-cz-GsF"/>
+                                    <constraint firstItem="0gT-bd-AAH" firstAttribute="top" secondItem="F2J-bV-Zgy" secondAttribute="top" constant="263" id="Lfq-PR-mlP"/>
+                                    <constraint firstItem="PtQ-kq-elI" firstAttribute="leading" secondItem="F2J-bV-Zgy" secondAttribute="leading" constant="8" id="Mhn-ra-QrQ"/>
                                     <constraint firstItem="nP4-iu-jkO" firstAttribute="leading" secondItem="F2J-bV-Zgy" secondAttribute="leading" constant="8" id="NMG-Ec-ic5"/>
                                     <constraint firstItem="i9d-Lv-ON0" firstAttribute="top" secondItem="F2J-bV-Zgy" secondAttribute="top" constant="88" id="OJa-7G-ahB"/>
                                     <constraint firstItem="h23-dE-qtk" firstAttribute="top" secondItem="F2J-bV-Zgy" secondAttribute="top" constant="193" id="ORn-lg-1pl"/>
                                     <constraint firstAttribute="trailing" secondItem="efY-5Y-x1L" secondAttribute="trailing" constant="8" id="PzK-4y-qjv"/>
                                     <constraint firstItem="pAq-Fk-6Oz" firstAttribute="top" secondItem="F2J-bV-Zgy" secondAttribute="top" constant="229" id="QQG-9U-LRn"/>
                                     <constraint firstItem="0xl-XR-Wf8" firstAttribute="top" secondItem="F2J-bV-Zgy" secondAttribute="top" constant="8" id="R5h-Oc-rzN"/>
+                                    <constraint firstAttribute="bottom" secondItem="Vnh-MQ-Tt6" secondAttribute="bottom" constant="18" id="S7o-JN-ptK"/>
                                     <constraint firstItem="CVQ-0Q-eMc" firstAttribute="leading" secondItem="F2J-bV-Zgy" secondAttribute="leading" constant="8" id="UTq-79-oc1"/>
                                     <constraint firstAttribute="trailing" secondItem="xRr-FU-RVm" secondAttribute="trailing" constant="282" id="V5j-d5-93G"/>
                                     <constraint firstItem="tEw-Sa-mL4" firstAttribute="leading" secondItem="F2J-bV-Zgy" secondAttribute="leading" constant="8" id="VxL-1t-3tQ"/>
+                                    <constraint firstItem="Vnh-MQ-Tt6" firstAttribute="top" secondItem="F2J-bV-Zgy" secondAttribute="top" constant="78" id="WUn-es-yTb"/>
                                     <constraint firstItem="Wfk-25-ESW" firstAttribute="leading" secondItem="F2J-bV-Zgy" secondAttribute="leading" constant="8" id="a5C-tk-vgS"/>
                                     <constraint firstAttribute="trailing" secondItem="c5S-qr-5zq" secondAttribute="trailing" constant="8" id="ah0-bb-vyi"/>
                                     <constraint firstAttribute="trailing" secondItem="qrb-2A-xci" secondAttribute="trailing" constant="282" id="cX3-dB-kXI"/>
                                     <constraint firstAttribute="trailing" secondItem="J0X-0a-zSY" secondAttribute="trailing" constant="8" id="d79-ew-zwl"/>
                                     <constraint firstItem="Wfk-25-ESW" firstAttribute="top" secondItem="F2J-bV-Zgy" secondAttribute="top" constant="105" id="dIZ-Ym-Jiu"/>
+                                    <constraint firstItem="hOo-KM-AqB" firstAttribute="top" secondItem="F2J-bV-Zgy" secondAttribute="top" constant="194" id="ebc-cT-5fl"/>
+                                    <constraint firstItem="PtQ-kq-elI" firstAttribute="top" secondItem="F2J-bV-Zgy" secondAttribute="top" constant="211" id="fnD-a4-Iif"/>
                                     <constraint firstItem="CVQ-0Q-eMc" firstAttribute="top" secondItem="F2J-bV-Zgy" secondAttribute="top" constant="139" id="hEf-6V-r26"/>
                                     <constraint firstItem="i9d-Lv-ON0" firstAttribute="leading" secondItem="F2J-bV-Zgy" secondAttribute="leading" constant="8" id="j2A-Qr-aBV"/>
                                     <constraint firstItem="nP4-iu-jkO" firstAttribute="top" secondItem="F2J-bV-Zgy" secondAttribute="top" constant="34" id="k5P-u8-gMp"/>
@@ -799,6 +823,7 @@
                                     <constraint firstAttribute="trailing" secondItem="h23-dE-qtk" secondAttribute="trailing" constant="8" id="yK6-kn-SE8"/>
                                     <constraint firstItem="efY-5Y-x1L" firstAttribute="top" secondItem="F2J-bV-Zgy" secondAttribute="top" constant="211" id="yiL-WR-z9H"/>
                                     <constraint firstAttribute="trailing" secondItem="tEw-Sa-mL4" secondAttribute="trailing" constant="282" id="zON-QD-kAN"/>
+                                    <constraint firstItem="0gT-bd-AAH" firstAttribute="leading" secondItem="F2J-bV-Zgy" secondAttribute="leading" constant="8" id="znp-Qf-do3"/>
                                 </constraints>
                                 <variation key="default">
                                     <mask key="subviews">
@@ -849,6 +874,7 @@
                         <outlet property="imageButton" destination="F2J-bV-Zgy" id="G30-KN-us3"/>
                         <outlet property="label1" destination="i9d-Lv-ON0" id="T09-Q6-ZUG"/>
                         <outlet property="label10" destination="hz5-V8-6n0" id="oQT-iG-eKw"/>
+                        <outlet property="label11" destination="0gT-bd-AAH" id="GjP-Oa-SK8"/>
                         <outlet property="label2" destination="Wfk-25-ESW" id="g8C-vs-LB6"/>
                         <outlet property="label3" destination="xRr-FU-RVm" id="ZAG-pJ-Rsr"/>
                         <outlet property="label4" destination="CVQ-0Q-eMc" id="uiO-U9-16L"/>
@@ -857,6 +883,7 @@
                         <outlet property="label7" destination="hOo-KM-AqB" id="SXh-Mx-zek"/>
                         <outlet property="label8" destination="PtQ-kq-elI" id="zfE-fn-PXC"/>
                         <outlet property="label9" destination="pAq-Fk-6Oz" id="a9p-ax-f7g"/>
+                        <outlet property="longtext" destination="Vnh-MQ-Tt6" id="qjr-h7-FRh"/>
                         <outlet property="networkButton" destination="gL9-9u-xHf" id="JnX-uZ-oFW"/>
                         <outlet property="result1" destination="768-91-WwE" id="4mU-tJ-FI4"/>
                         <outlet property="result10" destination="k9g-P1-s59" id="9k6-g3-eaU"/>
