--- a/capture/Base.lproj/Main.storyboard
+++ b/capture/Base.lproj/Main.storyboard
@@ -288,18 +288,22 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="kernel_text" translatesAutoresizingMaskIntoConstraints="NO" id="VwH-iJ-Cf4">
-                                <rect key="frame" x="113" y="7" width="375" height="667"/>
-                            </imageView>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rLn-qz-Csm">
+                                <rect key="frame" x="0.0" y="20" width="584" height="572"/>
+                                <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="11"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
                         </subviews>
                         <color key="backgroundColor" red="0.88038589015151514" green="0.86829799048186296" blue="0.87736391523410207" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstAttribute="centerY" secondItem="VwH-iJ-Cf4" secondAttribute="centerY" constant="-40" id="DQW-E5-Vgb"/>
-                            <constraint firstAttribute="centerX" secondItem="VwH-iJ-Cf4" secondAttribute="centerX" id="XEn-Ap-fpi"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="rLn-qz-Csm" secondAttribute="trailing" id="CrY-KS-ZPI"/>
+                            <constraint firstItem="cZc-cD-y0W" firstAttribute="top" secondItem="rLn-qz-Csm" secondAttribute="bottom" constant="8" symbolic="YES" id="IqA-Vp-vJr"/>
+                            <constraint firstItem="rLn-qz-Csm" firstAttribute="leading" secondItem="5V6-aK-Aab" secondAttribute="leading" id="oJu-BJ-sjF"/>
+                            <constraint firstItem="rLn-qz-Csm" firstAttribute="top" secondItem="WXO-rw-2E1" secondAttribute="bottom" id="vbr-cz-8ec"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="kernelText" destination="VwH-iJ-Cf4" id="2ar-r4-pKk"/>
+                        <outlet property="kernel" destination="rLn-qz-Csm" id="zqW-hQ-A1H"/>
                         <segue destination="8yU-g7-Mbk" kind="presentation" identifier="permission" modalTransitionStyle="crossDissolve" id="fBC-gM-xei"/>
                     </connections>
                 </viewController>
@@ -940,7 +944,6 @@
         <image name="flash_icon" width="13" height="20"/>
         <image name="homecapture" width="182" height="179"/>
         <image name="image" width="47" height="41"/>
-        <image name="kernel_text" width="375" height="667"/>
         <image name="network" width="47" height="42"/>
         <image name="off_button" width="20" height="9"/>
         <image name="photo-image" width="51" height="70"/>
